- Fixed page too long issue in Safari (I think)

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -11,7 +11,6 @@
 		flex-direction: row;
 		margin-left: $menu-width;
 		padding: 0 10px;
-		width: calc(100% - #{$menu-width});
 
 		.title {
 			flex-basis: 0;
@@ -42,7 +41,9 @@
 
 		.tooltip {
 			display: inline-block;
-			flex-grow: 1
+			flex-basis: 0;
+			flex-grow: 1;
+			flex-shrink: 1;
 		}
 
 		button {
