--- a/src/sass/pages/templates.scss
+++ b/src/sass/pages/templates.scss
@@ -1,6 +1,7 @@
 #templates {
 
 	header {
+		flex-basis: auto;
 		flex-grow: 0;
 		flex-shrink: 0;
 	}
